# patchcord

./: .dockerignore  .env.direct.example  .env.server.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 4293e3599ded_initial_schema.py  a1b2c3d4e5f6_add_thread_columns.py
docs/: README.md  architecture.md  client-setup.md  deployment.md  oauth-web-clients.md  security-pentest-2026-03-10.md
migrations/: 001_initial_supabase.sql  002_rate_limit_bans.sql  003_bearer_tokens.sql  004_user_namespaces.sql  005_multi_recipient.sql  006_enable_rls.sql  007_message_encryption.sql  008_delivered_at.sql
patchcord/: __init__.py
patchcord-plugin/: README.md  package.json
patchcord-plugin/.claude-plugin/: marketplace.json  plugin.json
patchcord-plugin/channel/: package.json  server.ts
patchcord-plugin/codex/: SKILL.md
patchcord-plugin/commands/: inbox.toml  subscribe.toml  wait.toml
patchcord-plugin/hooks/: hooks.json
patchcord-plugin/scripts/: check-inbox.sh  enable-statusline.sh  statusline.sh  subscribe.mjs
patchcord-plugin/tests/: test-folder-detection.mjs  test-folder-detection.sh  ws_test.mjs
patchcord/cli/: __init__.py  manage_tokens.py  migrate.py
patchcord/core/: __init__.py  attachments.py  formatting.py  helpers.py  instructions.py
patchcord/direct/: __init__.py  server.py
skills/: patchcord-web.md
(+18 files in other folders)
